Implement authentication, Hilt DI, and core navigation
- Integrate Firebase Auth and Firestore, including Google Sign-In support.
- Establish MVVM architecture with `AuthRepository` and ViewModels for Login and Register flows.
- Configure Hilt for dependency injection and set up `TitipinApp`.
- Implement Navigation Compose with `MainBottomNav` and routing logic.
- Create `LoginActivity`, `RegisterActivity`, and `HomeScreen` UIs.
- Refactor theme files, define new color palette, and add Plus Jakarta Sans fonts.
- Update Gradle dependencies and manifest for internet permissions and activity registration.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Titip.In</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_add_circle">AddCircleActivity</string>
+    <string name="title_activity_circle">CircleActivity</string>
+    <string name="title_activity_circle_detail">CircleDetailActivity</string>
+    <string name="title_activity_session">SessionActivity</string>
+    <string name="title_activity_titipan_detail">TitipanDetailActivity</string>
 </resources>
